--- a/config/tracing.yaml
+++ b/config/tracing.yaml
@@ -1,12 +1,13 @@
 apiVersion: dapr.io/v1alpha1
 kind: Configuration
 metadata:
-  name: daprConfig
+  name: tracing
   namespace: default
 spec:
   tracing:
     samplingRate: "1"
     zipkin:
-      endpointAddress: "http://localhost:9411/api/v2/spans"
+      endpointAddress: "http://zipkin.default.svc.cluster.local:9411/api/v2/spans"
   metric:
     enabled: true
+
