--- a/config/open-telemetry-collector-appinsights.yaml
+++ b/config/open-telemetry-collector-appinsights.yaml
@@ -21,7 +21,7 @@ data:
         loglevel: debug
       azuremonitor:
         endpoint: "https://dc.services.visualstudio.com/v2/track"
-        instrumentation_key: "bf71cae6-a3be-4f94-b226-c3a8bc096492"
+        instrumentation_key: "<YOUR_APP_INSIGHTS_INSTRUMENTATION_KEY>"
         # maxbatchsize is the maximum number of items that can be
         # queued before calling to the configured endpoint
         maxbatchsize: 100
